# fast-hex

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile.ci  HACKING.md
.github/workflows/: ci.yml
cmake/: avx_support.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  spell-targets.cmake  variables.cmake
include/fast-hex/: fast-hex.hpp
include/fast_hex/: fast_hex.hpp
source/: fast-hex.cpp  fast_hex.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  fast_hex_bench.cpp
test/fuzz/: CMakeLists.txt  fuzz_roundtrip.cpp
test/source/: CMakeLists.txt  fast-hex_test.cpp  test_valid_inputs.cpp
